deputy-library/src/snapshots/deputy_library__package__tests__file_is_converted_to_bytes.snap
---
source: deputy-library/src/package.rs
expression: metadata_bytes
---
[
    13,
    0,
    0,
    0,
    83,
    111,
    109,
    101,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    10,
]
