deputy-library/src/snapshots/deputy_library__package__tests__metadata_is_converted_to_bytes.snap
---
source: deputy-library/src/package.rs
expression: metadata_bytes
---
[
    124,
    0,
    0,
    0,
    123,
    34,
    110,
    97,
    109,
    101,
    34,
    58,
    34,
    115,
    111,
    109,
    101,
    45,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    45,
    110,
    97,
    109,
    101,
    34,
    44,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    34,
    48,
    46,
    49,
    46,
    48,
    34,
    44,
    34,
    99,
    104,
    101,
    99,
    107,
    115,
    117,
    109,
    34,
    58,
    34,
    100,
    56,
    54,
    55,
    48,
    48,
    49,
    100,
    98,
    48,
    101,
    50,
    98,
    54,
    101,
    48,
    52,
    57,
    54,
    102,
    57,
    102,
    97,
    99,
    57,
    54,
    57,
    51,
    48,
    101,
    50,
    100,
    52,
    50,
    50,
    51,
    51,
    101,
    99,
    100,
    51,
    99,
    97,
    48,
    52,
    49,
    51,
    101,
    48,
    55,
    53,
    51,
    100,
    52,
    99,
    55,
    54,
    57,
    53,
    100,
    50,
    56,
    57,
    99,
    34,
    125,
]
