deputy-library/src/snapshots/deputy_library__package__tests__metadata_is_parsed_from_bytes.snap
---
source: deputy-library/src/package.rs
expression: metadata
---
PackageMetadata {
    name: "some-package-name",
    version: "0.1.0",
    checksum: "d867001db0e2b6e0496f9fac96930e2d42233ecd3ca0413e0753d4c7695d289c",
}
