deputy-library/src/snapshots/deputy_library__package__tests__package_is_converted_to_stream.snap
---
source: deputy-library/src/package.rs
expression: bytes
---
[
    123,
    34,
    110,
    97,
    109,
    101,
    34,
    58,
    34,
    115,
    111,
    109,
    101,
    45,
    112,
    97,
    99,
    107,
    97,
    103,
    101,
    45,
    110,
    97,
    109,
    101,
    34,
    44,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    34,
    48,
    46,
    49,
    46,
    48,
    34,
    44,
    34,
    99,
    104,
    101,
    99,
    107,
    115,
    117,
    109,
    34,
    58,
    34,
    97,
    97,
    51,
    48,
    98,
    49,
    99,
    99,
    48,
    53,
    99,
    49,
    48,
    97,
    99,
    56,
    97,
    49,
    102,
    51,
    48,
    57,
    101,
    51,
    100,
    101,
    48,
    57,
    100,
    101,
    52,
    56,
    52,
    99,
    54,
    100,
    101,
    49,
    100,
    99,
    55,
    99,
    50,
    50,
    54,
    101,
    50,
    99,
    102,
    56,
    101,
    49,
    97,
    53,
    49,
    56,
    51,
    54,
    57,
    98,
    49,
    100,
    55,
    51,
    34,
    125,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    115,
    111,
    109,
    101,
    32,
    116,
    111,
    109,
    108,
    32,
    10,
    13,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    115,
    111,
    109,
    101,
    32,
    114,
    101,
    97,
    100,
    109,
    101,
    32,
    10,
    14,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    115,
    111,
    109,
    101,
    32,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    32,
    10,
]
