deputy-library/src/snapshots/deputy_library__package__tests__package_is_parsed_from_bytes.snap
---
source: deputy-library/src/package.rs
expression: package.metadata
---
PackageMetadata {
    name: "some-package-name",
    version: "0.1.0",
    checksum: "aa30b1cc05c10ac8a1f309e3de09de484c6de1dc7c226e2cf8e1a518369b1d73",
    virtual_machine: Some(
        VirtualMachine {
            operating_system: Ubuntu,
            architecture: Arm64,
        },
    ),
}
